web-infras/parser/tests/fixtures/self-added/strict-mode/strict-mode-object-pattern-rename-argument/output.txt
[SyntaxError]: unexpect keyword in strict mode (3,19)
3|    const { val : arguments } = [];
 |                 ^
